# couponDuniya

./: .env.example  .gitignore  .replit  ADMIN_GIFT_CARD_FLOW.md  AUTH-IMPLEMENTATION.md  BLOG_MODULE_README.md  COMMANDS.md  COMPREHENSIVE-AUDIT-REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_REPORT.md  MICROSERVICES-PENDING-WORK.md  MONITORING-OBSERVABILITY.md  PROJECT-STATUS.md  README.md  SECURITY-AUDIT-CHECKLIST.md  SETUP-COMPLETE.md  WORKER-COMPLETION-REPORT.md  app_placeholder.txt  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  pyproject.toml  replit.md
attached_assets/: Pasted--1-1-Next-js-16-0-3-stale-Turbopack-Console-Error-A-tree-hydrated-but-some-attributes-of-the-se-1764428591368_1764428591369.txt  Pasted--Error-Type-Console-Error-Error-Message-A-tree-hydrated_1764921388306.txt  Pasted--Error-Type-Console-TypeError-Error-Message-merchants-m_1764831795025.txt  Pasted--Error-Type-Recoverable-Error-Error-Message-Hydration-f_1764844860215.txt  Pasted--File-home-runner-workspace-backend-app--1764752246872_1764752246872.txt  Pasted--SQL-SELECT-users-id-users-uuid-users-email-users-mobil_1764766913929.txt  Pasted--section-className-container-div-MerchantGrid-merchants--1764428132512_1764428132513.txt  Pasted--section-className-container-div-MerchantGrid-merchants--1764428277114_1764428277115.txt  Pasted--venv-deepak-deepak-HP-ProDesk-600-G2-SFF-office-Projec_1764760439646.txt  Pasted--workspace-backend-alembic-upgrade-head-INFO-alembic-ru_1764747638985.txt  (+26 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  (+4 more)
(+429 files in other folders)
