[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "email-validator>=2.3.0",
    "fastapi>=0.123.5",
    "flake8>=7.3.0",
    "hiredis>=3.3.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "phonenumbers>=9.0.19",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg>=3.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "razorpay>=2.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
